--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.1.0
 Authors@R: 
     c(person("Raul","de Paula Pires", role = c("aut","cre"),email="rauldepaulapires@gmail.com",
     comment = c(ORCID = "0000-0001-6500-4289")))
-Description: The crookR package provides tools for simulating stem deformations (“crooks”) on tree point clouds derived from terrestrial or mobile laser scanning. It introduces parameterized bending patterns that reproduce realistic single- and double-directional crooks along the stem axis, enabling the generation of large, customizable synthetic datasets. These deformations can support training and validation of machine learning models for wood defect detection, quality assessment, and precision forestry applications.
+Description: Simulates parameterized single- and double-directional stem deformations in tree point clouds derived from terrestrial or mobile laser scanning, enabling the generation of realistic synthetic datasets for training and validating machine learning models in wood defect detection, quality assessment, and precision forestry.
 License: MIT + file LICENSE
 Depends: R (>= 4.2)
 Encoding: UTF-8
