--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,27 +2,34 @@ Package: crookR
 Title: Synthetic Crook Deformations in Stem Point Clouds
 Version: 0.1.0
 Authors@R: 
-    c(person("Raul","de Paula Pires", role = c("aut","cre"),email="rauldepaulapires@gmail.com",
-    comment = c(ORCID = "0000-0001-6500-4289")))
-Description: Simulates parameterized single- and double-directional stem deformations in tree point clouds derived from terrestrial or mobile laser scanning, enabling the generation of realistic synthetic datasets for training and validating machine learning models in wood defect detection, quality assessment, and precision forestry. For more details see Pires (2025) <doi:10.54612/a.7hln0kr0ta>.
+    person("Raul", "de Paula Pires", , "rauldepaulapires@gmail.com", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0001-6500-4289"))
+Description: Simulates parameterized single- and double-directional stem
+    deformations in tree point clouds derived from terrestrial or mobile
+    laser scanning, enabling the generation of realistic synthetic
+    datasets for training and validating machine learning models in wood
+    defect detection, quality assessment, and precision forestry. For more
+    details see Pires (2025) <doi:10.54612/a.7hln0kr0ta>.
 License: MIT + file LICENSE
-Depends: R (>= 4.2)
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.3
-Suggests: 
-    testthat (>= 3.0.0),
-    knitr,
-    rmarkdown,
-    spelling,
-    lidR
-Config/testthat/edition: 3
+URL: https://github.com/raudep/crookR
+BugReports: https://github.com/raudep/crookR/issues
+Depends: 
+    R (>= 4.2)
 Imports: 
     data.table,
     stats,
     utils
-VignetteBuilder: knitr
-LazyData: false
+Suggests: 
+    knitr,
+    lidR,
+    rmarkdown,
+    spelling,
+    testthat (>= 3.0.0)
+VignetteBuilder: 
+    knitr
+Config/testthat/edition: 3
+Encoding: UTF-8
 Language: en-US
-URL: https://github.com/raudep/crookR
-BugReports: https://github.com/raudep/crookR/issues
+LazyData: false
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.3
