--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,12 +4,7 @@ Version: 0.1.0
 Authors@R: 
     person("Raul", "de Paula Pires", , "rauldepaulapires@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-6500-4289"))
-Description: Simulates parameterized single- and double-directional stem
-    deformations in tree point clouds derived from terrestrial or mobile
-    laser scanning, enabling the generation of realistic synthetic
-    datasets for training and validating machine learning models in wood
-    defect detection, quality assessment, and precision forestry. For more
-    details see Pires (2025) <doi:10.54612/a.7hln0kr0ta>.
+Description: Simulates parameterized single- and double-directional stem deformations in tree point clouds derived from terrestrial or mobile laser scanning, enabling the generation of realistic synthetic datasets for training and validating machine learning models in wood defect detection, quality assessment, and precision forestry. For more details see Pires (2025) <doi:10.54612/a.7hln0kr0ta>.
 License: MIT + file LICENSE
 URL: https://github.com/raudep/crookR
 BugReports: https://github.com/raudep/crookR/issues
